# amqpcpp-test

./: CMakeLists.txt  LICENSE  README.md
amqpcpp-test/: AmqpCppStreamer.cpp  AmqpCppStreamer.h  AsioHandler.cpp  AsioHandler.h  CMakeLists.txt  SynchronousChannel.cpp  SynchronousChannel.h  main.cpp
